# cchat-madeinlks

./: .gitignore  CMakeLists.txt  README.md
include/: cclient.h  color.h  cserver.h  thrterm.h  var.h
old/: client_chat.c  server_chat.c
src/: CMakeLists.txt  cchat.c  client_chat.c  client_chatV1.c  client_chatV2.c  client_chatV3.c  fclient.c  fserver.c  fthrterm.c  server_chat.c  server_chatV1.c  server_chatV2.c  var.c
